# antigravity-lab

./: .env.example  .env.production  .gitignore  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  run.tx  update.sh  vite.config.js
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity.rs  gemini_sync.rs  lib.rs  proxy_server.rs
src-tauri/wrapper/: Cargo.toml
src-tauri/wrapper/src/: main.rs
src/components/: Icon.jsx  SessionGuard.jsx  UpdateBanner.jsx
src/context/: AuthContext.jsx
src/pages/: AccountsPage.jsx  ConnectionPage.jsx  DashboardPage.jsx  LoginPage.jsx  PlansPage.jsx  SettingsPage.jsx
src/services/: api.js
