[package]
name = "client"
version = "1.0.0"
description = "AI Account Manager — Desktop Client"
authors = ["AI Dashboard"]
edition = "2021"

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
machine-uid = "0.5"
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
dirs = "5"
sysinfo = "0.33"
log = "0.4"
tauri-plugin-process = "2.3.1"
