[package]
name = "client"
version = "1.0.11"
description = "AI Account Manager — Desktop Client"
authors = ["AI Dashboard"]
edition = "2021"

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
machine-uid = "0.5"
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
dirs = "5"
sysinfo = "0.33"
log = "0.4"
tauri-plugin-process = "2.3.1"

# Proxy server dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
bytes = "1"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# MITM TLS proxy dependencies
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
regex-lite = "0.1"
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"


